--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Manovre di emergenza</string>
     <string name="TitleMain">Sai cosa fare per aiutare una persona infortunata e/o vittima di un incidente?</string>
-    <string name="DescriptionMain">Sapere cosa fare in una emergenza è differente da pensare di poterla gestire realmente, in quanto la maggior parte delle persone potrebbe, in preda al panico, bloccarsi o rischiare di fare la cosa sbagliata. Questo quiz mira ovviamente a dare solo delle indicazioni generali sui comportamenti da tenere e non si vuole assolutamente sostituirsi ad un corso di "pronto soccorso". </string>
+    <string name="DescriptionMain">Sapere cosa fare in una emergenza è differente da pensare di poterla gestire realmente, in quanto la maggior parte delle persone potrebbe, in preda al panico, bloccarsi o rischiare di fare la cosa sbagliata. Questo quiz mira ovviamente a dare solo delle indicazioni generali sui comportamenti da tenere e non si deve assolutamente considerare una alternativa ad un corso di "pronto soccorso". </string>
     <string name="GoMainButton">Vai al Quiz</string>
 
     <string name="TitleQuiz">Manovre di emergenza</string>
@@ -12,7 +12,7 @@
     <string name="Question0_2">Stimolare il movimento della persona, verificando la postura</string>
     <string name="Question0_3">Aiutarla a camminare verso il primo mezzo disponibile per portarla in ospedale</string>
     <string name="Question1">Cosa fare se si trova una persona ferita, o si assiste ad un incidente in cui sono coinvolte delle persone?</string>
-    <string name="Question1_1">Si è obbligati a chiamare il 112/118 ed attendere l\'arrivo dei soccorsi. (art. 593 Codice Penale - Omissione di Soccorso)</string>
+    <string name="Question1_1">Si è obbligati a chiamare il 112/118 ed attendere l\'arrivo dei soccorsi. </string>
     <string name="Question1_2">Si è obbligati a spostare la persona ferita e metterla al sicuro a qualunque costo per evitarle ulteriori danni</string>
     <string name="Question1_3">Non c\'è nessun obbligo, si deve transitare velocemente per non creare traffico </string>
     <string name="Question2">Cosa fare in presenza di un bambino che manifesta difficoltà respiratorie mentre sta mangiando?</string>
@@ -27,18 +27,18 @@
     <string name="Question4_1">Applicare sulla zona interessata del ghiaccio per ridurre il bruciore </string>
     <string name="Question4_2">Togliere eventuali vestiti attaccati alla pelle e usare un disinfettante </string>
     <string name="Question4_3">Lavare a lungo con acqua corrente per ridurre la temperatura</string>
-    <string name="Question5">Cosa fare se si vede una persona "prendere la scossa"?</string>
-    <string name="Question5_1">Afferrarla con le mani e spostarla immediatamente dalla fonte di </string>
+    <string name="Question5">Cosa fare se si vede una persona \"prendere la scossa\"?</string>
+    <string name="Question5_1">Afferrarla con le mani e spostarla immediatamente dalla fonte di pericolo</string>
     <string name="Question5_2">Interrompere l\'alimentazione elettrica a livello centrale (contatore)</string>
     <string name="Question5_3">Usare qualcosa per spostarla </string>
 
 
     <string name="Answer0">Nel caso in cui una persona presenti dolori al centro del torace e agli arti superiori</string>
-    <string name="Answer0_1">bisogna cercare di metterla in posizione seduta con testa e spalle appoggiate e ginocchia piegate e chiamare immediatamente i soccorsi</string>
-    <string name="Answer0_2"></string>
-    <string name="Answer0_3"></string>
+    <string name="Answer0_1">bisogna cercare di metterla in posizione seduta con testa e spalle appoggiate e ginocchia piegate e chiamare immediatamente i soccorsi.</string>
+    <string name="Answer0_2">E\' sconsigliato qualsiasi altro movimento per non aggravare le condizioni dell\'infortunato in quanto potrebbe trattarsi di un attacco cardiaco</string>
+    <string name="Answer0_3">E\' sconsigliato qualsiasi altro movimento per non aggravare le condizioni dell\'infortunato in quanto potrebbe trattarsi di un attacco cardiaco</string>
     <string name="Answer1">In caso di incidente in cui sono coinvolte delle persone </string>
-    <string name="Answer1_1">si è obbligati a chiamare il 112/118 ed attendere l\'arrivo dei soccorsi. </string>
+    <string name="Answer1_1">si è obbligati a chiamare il 112/118 ed attendere l\'arrivo dei soccorsi (art. 593 Codice Penale - Omissione di Soccorso). </string>
     <string name="Answer1_2">e se possibile non spostare la persona ferita perché potrebbe avere dei traumi o lesioni alla colonna </string>
     <string name="Answer1_3">Non farlo costituisce reato(art. 593 Codice Penale - Omissione di Soccorso)</string>
     <string name="Answer2">In presenza di un bambino che manifesta difficoltà respiratorie mentre sta mangiando </string>
@@ -60,7 +60,8 @@
 
 
     <string name="greenMessage">Perfetto. Nessun errore!!!</string>
-    <string name="yellowMessage">Quasi perfetto, hai sbagliato 1 sola risposta su </string>
+    <string name="yellowMessage">Ottimo lavoro, hai sbagliato una sola risposta su </string>
+    <string name="yellowMessage1">. Esamina i risultati di seguito</string>
     <string name="redMessage1">Non ci siamo, hai sbagliato </string>
     <string name="redMessage2"> risposte su </string>
     <string name="redMessage3">. Esamina i risultati di seguito</string>
