--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,69 +1,73 @@
 <resources>
-    <string name="app_name">Manovre di emergenza</string>
-    <string name="TitleMain">Sai cosa fare per aiutare una persona infortunata e/o vittima di un incidente?</string>
-    <string name="DescriptionMain">Sapere cosa fare in una emergenza è differente da pensare di poterla gestire realmente, in quanto la maggior parte delle persone potrebbe, in preda al panico, bloccarsi o rischiare di fare la cosa sbagliata. Questo quiz mira ovviamente a dare solo delle indicazioni generali sui comportamenti da tenere e non si deve assolutamente considerare una alternativa ad un corso di "pronto soccorso". </string>
-    <string name="GoMainButton">Vai al Quiz</string>
+    <string name="app_name">Emergency Maneuvers </string>
+    <string name="TitleMain">Do you know what you should do in order to help an injured person or an accident victim?</string>
+    <string name="DescriptionMain">knowing what to do in an Emergency situation is different from being able to manage it properly, since the majority of people could be panic striken and risk to do the wrong thing . This test aims only to provide the user with general warnings and  obviously is not a proper \"First Aid course\". </string>
+    <string name="GoMainButton">GO to the Quiz</string>
 
-    <string name="TitleQuiz">Manovre di emergenza</string>
-    <string name="ResultQuizButton">Vai Al Risultato</string>
-
-    <string name="Question0">Nel caso in cui una persona presenti dolori al centro del torace e agli arti superiori cosa occorre fare?</string>
-    <string name="Question0_1">Metterla in posizione seduta con testa e spalle appoggiate e ginocchia piegate e chiamare immediatamente i soccorsi</string>
-    <string name="Question0_2">Stimolare il movimento della persona, verificando la postura</string>
-    <string name="Question0_3">Aiutarla a camminare verso il primo mezzo disponibile per portarla in ospedale</string>
-    <string name="Question1">Cosa fare se si trova una persona ferita, o si assiste ad un incidente in cui sono coinvolte delle persone?</string>
-    <string name="Question1_1">Si è obbligati a chiamare il 112/118 ed attendere l\'arrivo dei soccorsi. </string>
-    <string name="Question1_2">Si è obbligati a spostare la persona ferita e metterla al sicuro a qualunque costo per evitarle ulteriori danni</string>
-    <string name="Question1_3">Non c\'è nessun obbligo, si deve transitare velocemente per non creare traffico </string>
-    <string name="Question2">Cosa fare in presenza di un bambino che manifesta difficoltà respiratorie mentre sta mangiando?</string>
-    <string name="Question2_1">Prenderlo per i piedi e metterlo a testa in giù, scuotendolo </string>
-    <string name="Question2_2">Cercare in tutti i modi di togliere l\'ostruzione con le mani o con qualsiasi cosa a disposizione </string>
-    <string name="Question2_3">Incitarlo a tossire per espellere il corpo che ostruisce le vie aeree </string>
-    <string name="Question3">Cosa fare se si vede una persona cadere dall\'alto e rimanere incosciente?</string>
-    <string name="Question3_1">Scuoterla e metterla seduta per farla riprendere </string>
-    <string name="Question3_2">Non muoverla fino all\'arrivo dei soccorsi qualificati</string>
-    <string name="Question3_3">Portarla immediatamente al pronto soccorso </string>
-    <string name="Question4">Cosa fare in presenza di una ustione limitata?</string>
-    <string name="Question4_1">Applicare sulla zona interessata del ghiaccio per ridurre il bruciore </string>
-    <string name="Question4_2">Togliere eventuali vestiti attaccati alla pelle e usare un disinfettante </string>
-    <string name="Question4_3">Lavare a lungo con acqua corrente per ridurre la temperatura</string>
-    <string name="Question5">Cosa fare se si vede una persona \"prendere la scossa\"?</string>
-    <string name="Question5_1">Afferrarla con le mani e spostarla immediatamente dalla fonte di pericolo</string>
-    <string name="Question5_2">Interrompere l\'alimentazione elettrica a livello centrale (contatore)</string>
-    <string name="Question5_3">Usare qualcosa per spostarla </string>
+    <string name="TitleQuiz">Emergency Maneuvers</string>
+    <string name="ResultQuizButton">Go to the result</string>
+    <string name="RepeatQuizButton">Reset</string>
 
 
-    <string name="Answer0">Nel caso in cui una persona presenti dolori al centro del torace e agli arti superiori</string>
-    <string name="Answer0_1">bisogna cercare di metterla in posizione seduta con testa e spalle appoggiate e ginocchia piegate e chiamare immediatamente i soccorsi.</string>
-    <string name="Answer0_2">E\' sconsigliato qualsiasi altro movimento per non aggravare le condizioni dell\'infortunato in quanto potrebbe trattarsi di un attacco cardiaco</string>
-    <string name="Answer0_3">E\' sconsigliato qualsiasi altro movimento per non aggravare le condizioni dell\'infortunato in quanto potrebbe trattarsi di un attacco cardiaco</string>
-    <string name="Answer1">In caso di incidente in cui sono coinvolte delle persone </string>
-    <string name="Answer1_1">si è obbligati a chiamare il 112/118 ed attendere l\'arrivo dei soccorsi (art. 593 Codice Penale - Omissione di Soccorso). </string>
-    <string name="Answer1_2">e se possibile non spostare la persona ferita perché potrebbe avere dei traumi o lesioni alla colonna </string>
-    <string name="Answer1_3">Non farlo costituisce reato(art. 593 Codice Penale - Omissione di Soccorso)</string>
-    <string name="Answer2">In presenza di un bambino che manifesta difficoltà respiratorie mentre sta mangiando </string>
-    <string name="Answer2_1">e non prenderlo per i piedi e metterlo a testa in giù. Il corpo estraneo potrebbe muoversi e provocare una occlusione totale delle vie aeree </string>
-    <string name="Answer2_2">e non cercare in tutti i modi di togliere l\'ostruzione. Il corpo estraneo potrebbe muoversi e andare più in profondità provocando una occlusione totale delle vie aeree </string>
-    <string name="Answer2_3"> bisogna incitarlo a tossire per espellere il corpo che ostruisce le vie aeree </string>
-    <string name="Answer3">Nel caso si veda una persona cadere dall\'alto e rimanere incosciente </string>
-    <string name="Answer3_1">perchè potrebbe aver riportato un trauma alla colonna vertebrale </string>
-    <string name="Answer3_2">bisogna non muoverla fino all\'arrivo dei soccorsi qualificati </string>
-    <string name="Answer3_3">perché potrebbe aver riportato un trauma alla colonna vertebrale </string>
-    <string name="Answer4">In caso di ustione limitata </string>
-    <string name="Answer4_1">e non usare il ghiaccio. Peggiora il danno</string>
-    <string name="Answer4_2">e non togliere i vestiti. Esporremmo la persona ad un alto rischio di infezioni</string>
-    <string name="Answer4_3">lavare a lungo con acqua corrente per ridurre la temperatura </string>
-    <string name="Answer5">Nel caso si veda una persona "prendere la scossa" </string>
-    <string name="Answer5_1">e non spostare immediatamente il soggetto in quanto il soccorritore può rimanere vittima egli stesso</string>
-    <string name="Answer5_2">cercare d\'interrompere l\'alimentazione elettrica a livello centrale (contatore) </string>
-    <string name="Answer5_3">e non spostare immediatamente il soggetto in quanto il soccorritore può rimanere vittima egli stesso</string>
+    <string name="Question0">What should you do to help someone feeling chest and arm pains?</string>
+    <string name="Question0_1"> Help the person sit in a comfortable position with head and shoulders supported and knees bent and  call for help</string>
+    <string name="Question0_2"> stimulate the person\'s movement, verifying the posture </string>
+    <string name="Question0_3">Help the person to reach the hospital  </string>
+    <string name="Question1">What should you do with injured persons or incident’s victims ?</string>
+    <string name="Question1_1">You should call  112/118 and wait for the first aid to arrive. </string>
+    <string name="Question1_2">He was forced to move the injured person and placing her in safety at any cost to avoid further damage</string>
+    <string name="Question1_3">There is no obligation, you must quickly pass not to create traffic </string>
+    <string name="Question2">What to do in the presence of a child who experiences difficulty breathing while you are eating?</string>
+    <string name="Question2_1">Take him by the feet and put it upside down, shaking it </string>
+    <string name="Question2_2">Look at all the ways to remove the obstruction with your hands or with anything available</string>
+    <string name="Question2_3">Cheering to cough to expel the body that clogs the airways</string>
+    <string name="Question3">What to do if you see a person falling from the top and stay unconscious?</string>
+    <string name="Question3_1">Shake it and put seat to restart playback </string>
+    <string name="Question3_2">Do not move until the arrival of qualified relief</string>
+    <string name="Question3_3">Take her to the hospital </string>
+    <string name="Question4">What to do in the presence of a limited burn?</string>
+    <string name="Question4_1"> Apply to the affected area to reduce ice burning</string>
+    <string name="Question4_2">Remove any clothing attached to the skin and use a disinfectant</string>
+    <string name="Question4_3">Wash extensively with water to reduce the temperature</string>
+    <string name="Question5">What to do if you see a person \"electric shock\"?</string>
+    <string name="Question5_1">Hold it with both hands and move it immediately from source of danger</string>
+    <string name="Question5_2">Discontinue at central level power supply (counter)</string>
+    <string name="Question5_3">Use something to move it</string>
 
+    <string name="Answer0">If a person present pain in the center of the chest and upper limbs</string>
+    <string name="Answer0_1">need to help the person to sit in a comfortable position with head and shoulders supported and knees bent and  call for helpe ginocchia piegate e chiamare immediatamente i soccorsi.</string>
+    <string name="Answer0_2">It is discouraged any other movement so as not to aggravate the conditions of the injured because it may be of a heart attack</string>
+    <string name="Answer0_3">It is discouraged any other movement so as not to aggravate the conditions of the injured because it may be of a heart attack</string>
+    <string name="Answer1">In case of an accident in which people are involved </string>
+    <string name="Answer1_1">you should call emergency number and wait for the first aid to arrive (Penal code - Negligence and Failure to Render Aid). </string>
+    <string name="Answer1_2">If you can not move the injured person may have because of the trauma or injury to the column</string>
+    <string name="Answer1_3">Not doing so is a criminal offense</string>
+    <string name="Answer2">In the presence of a child who experiences difficulty breathing while he is eating</string>
+    <string name="Answer2_1">and not take it for your feet and put it upside down. The foreign body may move and cause a total obstruction of the airway </string>
+    <string name="Answer2_2">and do not try in any way to remove the obstruction. The foreign body may move and go deeper causing a total obstruction of the airway </string>
+    <string name="Answer2_3"> we must incite him to cough to expel the body that clogs the airways </string>
+    <string name="Answer3">If you see a person fall from top and remain unconscious</string>
+    <string name="Answer3_1">because it could have reported a trauma to the spine </string>
+    <string name="Answer3_2">It must not move until arrival of qualified relief</string>
+    <string name="Answer3_3">because it could have reported a trauma to the spine </string>
+    <string name="Answer4">In case of limited burns </string>
+    <string name="Answer4_1">and do not use ice. It worsens the damage</string>
+    <string name="Answer4_2">and do not take off your clothes. We esporremmo the person to a high risk of infection</string>
+    <string name="Answer4_3"> wash along with running water to reduce the temperature</string>
+    <string name="Answer5"> If you see a person \"get a shock \"</string>
+    <string name="Answer5_1">and not immediately move the person as the rescuer can become the victim himself</string>
+    <string name="Answer5_2">try to stop  at central level power supply </string>
+    <string name="Answer5_3">and not immediately move the person as the rescuer can become the victim himself</string>
 
-    <string name="greenMessage">Perfetto. Nessun errore!!!</string>
-    <string name="yellowMessage">Ottimo lavoro, hai sbagliato una sola risposta su </string>
-    <string name="yellowMessage1">. Esamina i risultati di seguito</string>
-    <string name="redMessage1">Non ci siamo, hai sbagliato </string>
-    <string name="redMessage2"> risposte su </string>
-    <string name="redMessage3">. Esamina i risultati di seguito</string>
+    <string name="greenMessage">Perfect. No error!!!</string>
+    <string name="yellowMessage">Good work, you made a mistake one answer on </string>
+    <string name="yellowMessage1">. Examine the results below</string>
+    <string name="redMessage1">You did not, you were wrong</string>
+    <string name="redMessage2"> answers on </string>
+    <string name="redMessage3">. Examine the results below</string>
+    <string name="noRespose1">You missed </string>
+    <string name="noRespose2">questions. Complete the quiz to continue </string>
+    <string name="ok">GOOD! </string>
+    <string name="ko">WRONG ANSWER!</string>
 
 </resources>
